--- a/codeeditor-backend/codeexecutor/templates/index.html
+++ b/codeeditor-backend/codeexecutor/templates/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/python/python.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="{% static 'codeeditor.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/codeeditor.css' %}" />
 </head>
 <body>
   <h2><strong style="color: #2e7d32;">PYTHON</strong> Online Code Editor</h2>
@@ -33,6 +33,6 @@
       </div>
     </div>
   </div>
-  <script src="{% static 'codeeditor.js' %}"></script>
+  <script src="{% static 'js/codeeditor.js' %}"></script>
 </body>
 </html>
